build with java 21